syntax = "proto3";

option csharp_namespace = "PRN231_ProjectMain";

import "Protos/product.proto";

package order;

service Orderer {
  rpc GetListOrderByUserId (GetListOrderByUserIdReq) returns (LstOrderRepl);
  rpc AddOrderByUserId (AddOrderByUserIdReq) returns (product.CRUDRepl);
  rpc GetOrderInfoByOrderId(GetOrderInfoByOrderIdReq) returns (LstOrderInfoRepl);
}

message GetOrderInfoByOrderIdReq{
	int32 orderId = 1;
}

message LstOrderInfoRepl{
	repeated OrderInfoProto orderInfos = 1;
}

message OrderInfoProto {
	int32 orderId = 1;
	int32 productId = 2;
	int32 quantity = 3;
	OrderProto order = 4;
	product.ProductProto product = 5;
}

message AddOrderByUserIdReq{
	string userId = 1;
	int32 total = 2;
	string date = 3;
	string address = 4;
	string note = 5;
	int32 orderStatusId = 6;
	string customerName = 7;
	string phonenum = 8;
	string email = 9;
	string paymentMethod = 10;
	repeated int32 productId = 11;
	repeated int32 quantity = 12;
}

message GetListOrderByUserIdReq {
	string userId = 1;
}

message LstOrderRepl{
	repeated OrderProto orders = 1;
}

message OrderProto {
	string userId = 1;
	int32 orderId = 2;
	int32 total = 3;
	string date = 4;
	string address = 5;
	string note = 6;
	int32 orderStatusId = 7;
	string customerName = 8;
	string phonenum = 9;
	string email = 10;
	string paymentMethod = 11;
	string orderStatus = 12;
}



